fi-marketing-guestbook/base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: guestbook
    tier: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
